fix external name

--- a/lsws/conf/vhosts/sman2crb/vhconf.conf
+++ b/lsws/conf/vhosts/sman2crb/vhconf.conf
@@ -21,9 +21,9 @@ index  {
   indexFiles              index.php, index.html
 }
 
-extprocessor Docker WS {
+extprocessor sman2crb-app {
   type                    proxy
-  address                 app-server
+  address                 sman2crb_app-server_1
   maxConns                1500
   initTimeout             60
   retryTimeout            7200
@@ -32,7 +32,7 @@ extprocessor Docker WS {
 
 context / {
   type                    proxy
-  handler                 Docker WS
+  handler                 sman2crb-app
   addDefaultCharset       off
   enableIpGeo             1
 }
@@ -41,25 +41,25 @@ rewrite  {
   enable                  1
   autoLoadHtaccess        1
 <IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
-    </IfModule>
+<IfModule mod_negotiation.c>
+Options -MultiViews -Indexes
+</IfModule>
 
-    RewriteEngine On
+RewriteEngine On
 
-    # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+# Handle Authorization Header
+RewriteCond %{HTTP:Authorization} .
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
+# Redirect Trailing Slashes If Not A Folder...
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} (.+)/$
+RewriteRule ^ %1 [L,R=301]
 
-    # Send Requests To Front Controller...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+# Send Requests To Front Controller...
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.php [L]
 </IfModule>
 }
 
