--- a/lsws/conf/httpd_config.conf
+++ b/lsws/conf/httpd_config.conf
@@ -292,6 +292,7 @@ listener Default SSL {
   certFile                /usr/local/lsws/admin/conf/webadmin.crt
   certChain               1
   map                     maintenance *
+  map                     sman4crb cbt342223.sman4cirebon.sch.id
 }
 
 vhTemplate centralConfigLog {
