--- a/lsws/conf/vhosts/sman6crb/vhconf.conf
+++ b/lsws/conf/vhosts/sman6crb/vhconf.conf
@@ -1,29 +1,35 @@
-docRoot                   $VH_ROOT/html/
-adminEmails               support@fathtech.co.id
+docRoot                   $VH_ROOT
 enableGzip                1
-enableBr                  1
-enableIpGeo               1
 
-errorlog $VH_ROOT/logs/error_log {
+errorlog  {
   useServer               1
-  logLevel                ERROR
-  rollingSize             10M
-  keepDays                3
 }
 
-accesslog $VH_ROOT/logs/access_log {
+accesslog $SERVER_ROOT/logs/$VH_NAME.access.log {
   useServer               0
-  rollingSize             10M
+  rollingSize             100M
+  keepDays                7
+  compressArchive         1
 }
 
 index  {
-  useServer               1
-  indexFiles              index.php, index.html
+  useServer               0
+  indexFiles              index.html, index.php
+  autoIndex               0
+  autoIndexURI            /_autoindex/default.php
 }
 
-extprocessor Docker WS {
+expires  {
+  enableExpires           1
+}
+
+accessControl  {
+  allow                   *
+}
+
+extprocessor sman6crb-app {
   type                    proxy
-  address                 app-server
+  address                 sman6crb_app-server_1
   maxConns                1500
   initTimeout             60
   retryTimeout            7200
@@ -31,65 +37,23 @@ extprocessor Docker WS {
 }
 
 context / {
-  type                    proxy
-  handler                 Docker WS
-  addDefaultCharset       off
-  enableIpGeo             1
+  location                $DOC_ROOT/
+  allowBrowse             1
+
+  rewrite  {
+RewriteFile .htaccess
+  }
 }
 
 rewrite  {
   enable                  1
   autoLoadHtaccess        1
-  rules                   <<<END_rules
-<IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
-    </IfModule>
-
-    RewriteEngine On
-
-    # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
-
-    # Send Requests To Front Controller...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
-</IfModule>
-  END_rules
-
-
+  logLevel                0
 }
 
-module cache {
-  note                    <<<END_note
-enableCache                      0
-enablePrivateCache               0
-checkPublicCache                 1
-checkPrivateCache                1
-qsCache                          1
-reqCookieCache                   1
-ignoreReqCacheCtrl               1
-ignoreRespCacheCtrl              0
-respCookieCache                  1
-expireInSeconds                  3600
-privateExpireInSeconds           3600
-maxStaleAge                      200
-maxCacheObjSize                  10000000
-storagepath                      cachedata
-noCacheDomain
-noCacheUrl
-no-vary                          0
-addEtag                          0
-  END_note
-
-
-  ls_enabled              1
+vhssl  {
+  keyFile                 /root/.acme.sh/certs/$VH_NAME/$VH_NAME.key
+  certFile                /root/.acme.sh/certs/$VH_NAME/fullchain.cer
+  certChain               1
 }
 
