--- a/lsws/conf/httpd_config.conf
+++ b/lsws/conf/httpd_config.conf
@@ -278,11 +278,22 @@ virtualhost maintenance {
   setUIDMode              2
 }
 
+virtualhost sman6crb {
+  vhRoot                  /var/www/vhosts/$VH_NAME
+  configFile              $SERVER_ROOT/conf/vhosts/$VH_NAME/vhconf.conf
+  note                    Instantiated from template docker
+  allowSymbolLink         1
+  enableScript            1
+  restrained              1
+  setUIDMode              2
+}
+
 listener HTTP {
   address                 *:80
   reusePort               1
   secure                  0
   map                     maintenance *
+  map                     sman6crb sman6crb
 }
 
 listener Default SSL {
@@ -293,6 +304,7 @@ listener Default SSL {
   certChain               1
   map                     maintenance *
   map                     sman4crb cbt342223.sman4cirebon.sch.id
+  map                     sman6crb cbt.sman6cirebon.sch.id
 }
 
 vhTemplate centralConfigLog {
