addd proxy to sman6crb

--- a/lsws/conf/vhosts/sman6crb/vhconf.conf
+++ b/lsws/conf/vhosts/sman6crb/vhconf.conf
@@ -37,12 +37,9 @@ extprocessor sman6crb-app {
 }
 
 context / {
-  location                $DOC_ROOT/
-  allowBrowse             1
-
-  rewrite  {
-RewriteFile .htaccess
-  }
+  type                    proxy
+  handler                 sman6crb-app
+  addDefaultCharset       off
 }
 
 rewrite  {
